# Glimpse

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  encode_objects.py  encode_vocab.py  pyproject.toml
object_detection/: cli.py  demo.py  demo_discover.py  demo_video.py  detector.py  discover.py  encoder.py  moe.py  segment.py  taxonomy.py  video.py  vocab.py
