[project]
name = "object-detection"
version = "0.1.0"
description = "Zero-shot object discovery for images and video using FastSAM + CLIP + WordNet"
requires-python = ">=3.10"
dependencies = [
    "opencv-contrib-python>=4.8",
    "open-clip-torch>=2.24",
    "torch>=2.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "ultralytics>=8.0",
    "nltk>=3.8",
    "streamlit>=1.30",
]

[tool.setuptools.packages.find]
include = ["object_detection*"]

[project.optional-dependencies]
dev = ["pytest", "ipython"]

[project.scripts]
detect = "object_detection.cli:main"
detect-demo = "object_detection.demo:main"
discover = "object_detection.demo_discover:main"
analyze-video = "object_detection.demo_video:main"
